creating react app

--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "elements-dashboard-react",
-  "version": "1.0.0",
-  "description": "React dashboard for elements",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "1.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Humanyze/elements-dashboard-react.git"
-  },
-  "author": "",
-  "bugs": {
-    "url": "https://github.com/Humanyze/elements-dashboard-react/issues"
-  },
-  "homepage": "https://github.com/Humanyze/elements-dashboard-react#readme"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
