--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://wyze-qa.humanyze.com/",
   "dependencies": {
+    "@redux-offline/redux-offline": "^2.3.2",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -30,6 +31,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "moment": "^2.21.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -40,6 +42,8 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scroll-horizontal": "^1.2.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
@@ -111,6 +115,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "node-sass": "^4.7.2",
+    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6"
   }
 }
