add simple login and user data fetch

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "react-router-redux": "^4.0.8",
+    "react-router-dom": "^4.2.2",
     "react-scroll-horizontal": "^1.2.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
@@ -87,8 +87,11 @@
     "transformIgnorePatterns": [
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
     ],
+    "modulePaths": ["src"],
     "moduleNameMapper": {
-      "^react-native$": "react-native-web"
+      "^react-native$": "react-native-web",
+      "^Redux(.*)$": "<rootDir>/redux"
+
     },
     "moduleFileExtensions": [
       "web.js",
