--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,11 @@
 // NOTE: to run eslint fix,
-// npx eslint --fix .
+// bash: npx eslint --fix .
 {
   "extends": "react-app",
   "rules": {
-    "object-curly-spacing": ["warn", "always"],
-    "semi": [2, "always"],
-    "quotes": ["warn", "single"],
-    "jsx-quotes": ["warn", "prefer-single"]
+    "object-curly-spacing": [1, "always"],
+    "semi": [1, "always"],
+    "quotes": [1, "single"],
+    "jsx-quotes": [1, "prefer-single"]
   }
 }
