--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "node-sass": "^4.7.2",
     "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.3",
     "storybook": "^1.0.0"
   }
 }
