--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "https://wyze-qa.humanyze.com/",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/react-fontawesome": "^0.0.17",
     "@redux-offline/redux-offline": "^2.3.2",
     "@storybook/react": "^3.3.15",
     "autoprefixer": "7.1.6",
@@ -32,6 +34,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "material-icons-react": "^1.0.0",
     "moment": "^2.21.0",
     "normalize-scss": "^7.0.1",
     "object-assign": "4.1.1",
@@ -117,6 +120,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.15",
+    "@storybook/addon-viewport": "^3.3.15",
     "chai-as-promised": "^7.1.1",
     "chai-enzyme": "^0.8.0",
     "enzyme": "^3.3.0",
