--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
-      "^Common(.*)$": "<rootDir>/components/common/$1",
+      "^common(.*)$": "<rootDir>/components/common/$1",
       "^Redux(.*)$": "<rootDir>/redux/$1"
     },
     "moduleFileExtensions": [
