--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/node:9.6.1
+    machine:
+      - node: 9.6.1
       # documented at https://circleci.com/docs/2.0/circleci-images/
 
     working_directory: ~/repo
