--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,22 +16,20 @@ jobs:
           - "c1:14:95:95:a1:2d:da:72:6a:df:c1:cf:b6:6e:b8:cd"
       - checkout
 
-      # Download and cache dependencies
-#      - restore_cache:
-#          keys:
-#          - v1-dependencies-{{ checksum "package.json" }}
-#          # fallback to using the latest cache if no exact match is found
-#          - v1-dependencies-
+      # Cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
 
       - run: yarn install
-      - run: echo "yarn successful"
-      - run: cat package.json
-#      - save_cache:
-#          paths:
-#            - node_modules
-#          key: v1-dependencies-{{ checksum "package.json" }}
-#
-      # run tests!
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      # RUN TESTS
       - run: yarn test
 
 
