--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,18 +2,13 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 version: 2
 jobs:
-  build:
+
+  yarn:
+    working_directory: ~/repo
     docker:
       - image: circleci/node:9.7.1
-      - image: mongo:3.4.4
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-
-    working_directory: ~/repo
 
     steps:
-      - add_ssh_keys:
-          fingerprints:
-          - "c1:14:95:95:a1:2d:da:72:6a:df:c1:cf:b6:6e:b8:cd"
       - checkout
 
       # Cache dependencies
@@ -24,13 +19,29 @@ jobs:
           - v1-dependencies-
 
       - run: yarn install
+
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+  test:
+    working_directory: ~/repo
+    docker:
+    - image: circleci/node:9.7.1
 
-      # RUN TESTS
-      - run: yarn test
+    steps:
+      -run: yarn test
 
+  build:
+    working_directory: ~/repo
+    docker:
+    -image: circleci/node:9.7.1
+
+workflows:
+  version: 2
+  build_and_deploy:
+    - yarn
+    - test
+    -deploy
 
 
