--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,16 @@ jobs:
     docker:
     -image: circleci/node:9.7.1
 
+    steps:
+      -run:
+        name: Building
+        command: |
+          if [ "${CIRCLE_BRANCH}"] == "develop"]; then
+            yarn build
+          elif [ "${CIRCLE_BRANCH}"] == "develop"]; then
+            yarn build --production
+          fi
+
 workflows:
   version: 2
   build_and_deploy:
