--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,57 +2,34 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 version: 2
 jobs:
-
-  yarn:
-    working_directory: ~/repo
+  build:
     docker:
-      - image: circleci/node:9.7.1
+      - image: circleci/node:9.6.1
+      - image: mongo:3.4.4
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+
+    working_directory: ~/repo
 
     steps:
       - checkout
 
-      # Cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+      # Download and cache dependencies
+#      - restore_cache:
+#          keys:
+#          - v1-dependencies-{{ checksum "package.json" }}
+#          # fallback to using the latest cache if no exact match is found
+#          - v1-dependencies-
 
       - run: yarn install
+      - run: echo "yarn successful"
+      - run: cat package.json
+#      - save_cache:
+#          paths:
+#            - node_modules
+#          key: v1-dependencies-{{ checksum "package.json" }}
+#
+      # run tests!
+      - run: yarn test
 
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-  test:
-    working_directory: ~/repo
-    docker:
-    - image: circleci/node:9.7.1
-
-    steps:
-      -run: yarn test
-
-  build:
-    working_directory: ~/repo
-    docker:
-    -image: circleci/node:9.7.1
-
-    steps:
-      -run:
-        name: Building
-        command: |
-          if [ "${CIRCLE_BRANCH}"] == "develop"]; then
-            yarn build
-          elif [ "${CIRCLE_BRANCH}"] == "develop"]; then
-            yarn build --production
-          fi
-
-workflows:
-  version: 2
-  build_and_deploy:
-    - yarn
-    - test
-    - deploy
 
 
