--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,24 +2,19 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 version: 2
 jobs:
-
-  yarn:
+  yarn_packages:
     working_directory: ~/repo
     docker:
       - image: circleci/node:9.7.1
-
     steps:
       - checkout
-
       # Cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
       - run: yarn install
-
       - save_cache:
           paths:
             - node_modules
@@ -31,17 +26,24 @@ jobs:
 
     steps:
       -run: yarn test
-
   build:
     working_directory: ~/repo
     docker:
     -image: circleci/node:9.7.1
-
+    steps:
+      -run:
+        name: Building
+        command: |
+          if [ "${CIRCLE_BRANCH}"] == "develop"]; then
+            yarn build
+          elif [ "${CIRCLE_BRANCH}"] == "develop"]; then
+            yarn build --production
+          fi
 workflows:
   version: 2
   build_and_deploy:
-    - yarn
-    - test
-    -deploy
-
-
+    jobs:
+      - yarn
+      - test
+      - build
+      - deploy
