refactor if elif bash statement

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,11 @@ jobs:
       - image: circleci/node:9.7.1
     steps:
       - run: |
-           if [[ "${CIRCLE_BRANCH}"] == "develop"]]; then
-             yarn build;
-           elif [[ "${CIRCLE_BRANCH}"] == "develop"]]; then
-             yarn build --production;
+           if [ "${CIRCLE_BRANCH}"] == "develop"]
+           then
+             yarn build
+           elif [ "${CIRCLE_BRANCH}"] == "develop"]
+           then
+             yarn build --production
            fi
       - run: echo "${CIRCLE_BRANCH}"
