--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,58 +1,6 @@
 # Javascript Node CircleCI 2.0 configuration file
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 version: 2
-jobs:
-  yarn:
-    working_directory: ~/project
-    docker:
-      - image: circleci/node:9.7.1
-    steps:
-      - checkout
-      # Cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run: yarn install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-  test:
-    working_directory: ~/project
-    docker:
-      - image: circleci/node:9.7.1
-
-    steps:
-      - run: yarn test
-      - run: echo "Test Successful"
-  build-conditional:
-    working_directory: ~/project
-    docker:
-      - image: circleci/node:9.7.1
-    steps:
-      - run: |
-           if [ ["${CIRCLE_BRANCH}"] == "develop"]
-           then
-             yarn build
-           elif [ ["${CIRCLE_BRANCH}"] == "master"]
-           then
-             yarn build --production
-           fi
-      - run: echo "${CIRCLE_BRANCH}"
-  deploy_dev:
-    working_directory: ~/project
-    docker:
-      - image: circleci/node:9.7.1
-    steps:
-      - run: echo 'hello world dev'
-  deploy_prod:
-      working_directory: ~/project
-      docker:
-        - image: circleci/node:9.7.1
-      steps:
-        - run: echo 'hello world prod'
 workflows:
   version: 2
   build:
@@ -77,5 +25,53 @@ workflows:
       - deploy_prod:
           requires:
             - build-conditional
+jobs:
+  build:
+    working_directory: ~/project
+    docker:
+      - image: circleci/node:9.7.1
+    steps:
+      - checkout
+
+      # Cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      - run: yarn test
+
+      - run: |
+         if [ ["${CIRCLE_BRANCH}"] == "develop"]
+         then
+           yarn build
+         elif [ ["${CIRCLE_BRANCH}"] == "master"]
+         then
+           yarn build --production
+         fi
+
+      - run: echo "${CIRCLE_BRANCH}"
+
+  deploy_dev:
+    working_directory: ~/project
+    docker:
+      - image: circleci/node:9.7.1
+    steps:
+      - run: echo 'hello world dev'
+  deploy_prod:
+      working_directory: ~/project
+      docker:
+        - image: circleci/node:9.7.1
+      steps:
+        - run: echo 'hello world prod'
+
 
 
