--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,10 @@ jobs:
       - run: yarn test
 
       - run: |
-         if [ ["${CIRCLE_BRANCH}"] == "develop"]
+         if [ "${CIRCLE_BRANCH}" == "develop"];
          then
            yarn build
-         elif [ ["${CIRCLE_BRANCH}"] == "master"]
+         elif [ "${CIRCLE_BRANCH}" == "master"];
          then
            yarn build --production
          fi
@@ -49,7 +49,7 @@ jobs:
         - run: echo 'hello world prod'
 #workflows:
 #  version: 2
-#  build:
+#  build_and_deploy:
 #    jobs:
 #      - yarn
 #      - test:
