--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "elements-dashboard-react",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://wyze-qa.humanyze.com/",
-  "homepage": "http://35.171.228.38/deployment",
+  "homepage": "http://35.171.228.38/deployments",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
