--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "elements-dashboard-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://35.171.228.38/deployments",
+  "proxy": "http://wyze-qa.humanyze.com",
+  "homepage": "http://localhost:81/deployments",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
