--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = src/assets/scss/humanyze-ui
 	url = https://github.com/Humanyze/humanyze-ui-scss.git
 	branch = master
+[submodule "src/assets/scss/humanyze-ui"]
+	path = src/assets/scss/humanyze-ui
+	url = https://github.com/Humanyze/humanyze-ui-scss.git
+	branch = master
