--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chai": "^4.1.2",
     "chalk": "1.1.3",
+    "circular-dependency-plugin": "^5.0.1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -28,7 +29,7 @@
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
@@ -42,6 +43,7 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.1",
+    "query-string": "^6.0.0",
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
