--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "redux-actions": "^2.3.0",
     "redux-axios-middleware": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^0.18.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "rxjs": "^5.5.8",
     "sinon-chai": "^2.14.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
