--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ node_modules
 # production
 /build
 
+# webpack stats
+stats.html
+
 # misc
 .DS_Store
 .env.local
@@ -22,3 +25,5 @@ yarn-debug.log*
 yarn-error.log*
 
 .idea
+
+
