--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
     docker:
       - image: circleci/node:8.9.2
     steps:
+      - run: echo $CIRCLE_BRANCH
       # Clone docker repo, always master
       - run: git clone https://github.com/Humanyze/client-docker.git
       - setup_remote_docker
