--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
       - run: ssh -T git@github.com
       - run: echo $CIRCLE_BRANCH
       # Clone docker repo, always master
+       - run:
+            name: Avoid hosts unknown for github
+            command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
       - run: git clone https://github.com/Humanyze/client-docker.git
       - setup_remote_docker
       - run: pwd
