--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ jobs:
       - run:
           name: Avoid hosts unknown for github
           command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
-      - run: ssh -T git@github.com
-      - run: git clone https://github.com/Humanyze/client-docker.git
+#      - run: ssh -T git@github.com
+      - run: git clone git@github.com:Humanyze/client-docker.git .
       - setup_remote_docker
       - run: pwd
       - run: bash ./clonerepos.sh
