--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,13 @@ jobs:
           command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
 #      - run: ssh -T git@github.com
       - run: git clone git@github.com:Humanyze/client-docker.git .
+      # todo add branch context
+      - run: git clone git@github.com:Humanyze/ember-dashboard.git ./ember-dashboard
+      - run: git clone --recursive git@github.com:Humanyze/elements-dashboard-react.git ./deployment-dashboard
+
       - setup_remote_docker
       - run: pwd
-      - run: bash ./clonerepos.sh
+      - run: docker-comose build
       - run: echo $CIRCLE_BRANCH
 
 #  deploy:
