--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
 #      - run: ssh -T git@github.com
       - run: git clone git@github.com:Humanyze/client-docker.git .
       # todo add branch context
-      - run: git clone git@github.com:Humanyze/ember-dashboard.git ./ember-dashboard
+      - run: git clone git@github.com:Humanyze/dashboard.git ./ember-dashboard
       - run: git clone --recursive git@github.com:Humanyze/elements-dashboard-react.git ./deployment-dashboard
 
       - setup_remote_docker
