--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - setup_remote_docker
       - run: pwd
       - run: docker-compose build
-      - run: docker --username mcondit --password $dockerhub_pw
+      - run: docker login --username mcondit --password $dockerhub_pw
       - run: docker-compose push
       - run: echo $CIRCLE_BRANCH
 
