fix docker build statement

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
 
       - setup_remote_docker
       - run: pwd
-#      - run: docker-compose build -f docker-compose.$CIRCLE_BRANCH.yml
-      - run: docker-compose build -f docker-compose.develop.yml
+#      - run: docker-compose -f docker-compose.$CIRCLE_BRANCH.yml build
+      - run: docker-compose -f docker-compose.develop.yml build
       - run: echo $dockerhub_pw
       - run: docker login --username mcondit04 --password $dockerhub_pw
       - run: docker-compose push
