--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
     "@redux-offline/redux-offline": "^2.3.2",
-    "@storybook/react": "^3.3.15",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
-    "babel-core": "6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
@@ -45,9 +44,9 @@
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
     "raf": "3.4.0",
-    "react": "^16.2.0",
+    "react": "^16.3.1",
     "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.3.1",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
@@ -79,7 +78,9 @@
     "start": "node scripts/start.js --env=jsdom",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "storybook": "start-storybook -p 9001 -c .storybook -s ./public"
+    "storybook": "start-storybook -p 9001 -c .storybook -s ./public",
+    "deploy": "yarn build && aws s3 sync build/ s3://humanyze-wyze-development.humanyze.com --delete",
+    "build-storybook": "build-storybook -c .storybook -o .out"
   },
   "babel": {
     "presets": [
@@ -91,7 +92,9 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.15",
+    "@storybook/addon-knobs": "^3.4.0",
     "@storybook/addon-viewport": "^3.3.15",
+    "@storybook/react": "^3.4.0",
     "chai-as-promised": "^7.1.1",
     "chai-enzyme": "^0.8.0",
     "enzyme": "^3.3.0",
