remove checkin line

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
 #      - run:
 #          name: Avoid hosts unknown for github
 #          command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
-      - run: ssh -T git@github.com
+#      - run: ssh -T git@github.com
 
       # submodule repo initialize
       - run: git submodule init
